move the following tasks' configuration to QuiltMappingsPlugin and refine their properties: - buildMappingsTiny - invertPerVersionMappings - removeIntermediary - dropInvalidMappings - generatePackageInfoMappings
move downloadDictionaryFile configuration to build.gradle (because it's prone to change) and refine its input
move decompileVineflower to QuiltMappingsPlugin
move eraseByteCode and genFakeSource to QuiltMappingsPlugin and give them custom classes

add MappingsDirConsumingTask
add MappingsDirOutputtingTask and implement it on GeneratePackageInfoMappingsTask

eliminate all FileConstants except tempDir which needs more investigation
eliminate RegularFile implementers in QuiltMappingsPlugin
rework JavadocProvider consumption
simplify UnpickGenTask and javadoc it saying they should only output unpick files
remove _GROUP suffix from Constants.Groups fields